// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuUtilityMenu it should pass in a custom prop 1`] = `
<ContentContainer
  aria-label="Utility menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <span
          className="inner-container"
        >
          <button
            aria-label="Back Button"
            className="back-button"
            onClick={[Function]}
          >
            <IconLeft
              className="icon-left"
              data-name="Layer 1"
              isBidi={true}
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
          <span
            className="header-text"
          >
            title
          </span>
        </span>
        <span
          className="right-container"
        >
          <button
            aria-label="Close Button"
            className="close-button"
            onClick={undefined}
          >
            <IconClose
              className="icon-close"
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  id="test"
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`MenuUtilityMenu should render with default props 1`] = `
<ContentContainer
  aria-label="Utility menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <span
          className="inner-container"
        >
          <button
            aria-label="Back Button"
            className="back-button"
            onClick={[Function]}
          >
            <IconLeft
              className="icon-left"
              data-name="Layer 1"
              isBidi={true}
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
          <span
            className="header-text"
          >
            title
          </span>
        </span>
        <span
          className="right-container"
        >
          <button
            aria-label="Close Button"
            className="close-button"
            onClick={undefined}
          >
            <IconClose
              className="icon-close"
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`MenuUtilityMenu should render with isHeightBounded 1`] = `
<ContentContainer
  aria-label="Utility menu"
  className="utility-menu"
  fill={true}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <span
          className="inner-container"
        >
          <button
            aria-label="Back Button"
            className="back-button"
            onClick={[Function]}
          >
            <IconLeft
              className="icon-left"
              data-name="Layer 1"
              isBidi={true}
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
          <span
            className="header-text"
          >
            title
          </span>
        </span>
        <span
          className="right-container"
        >
          <button
            aria-label="Close Button"
            className="close-button"
            onClick={undefined}
          >
            <IconClose
              className="icon-close"
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`MenuUtilityMenu should render with onRequestClose 1`] = `
<ContentContainer
  aria-label="Utility menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <span
          className="inner-container"
        >
          <button
            aria-label="Back Button"
            className="back-button"
            onClick={[Function]}
          >
            <IconLeft
              className="icon-left"
              data-name="Layer 1"
              isBidi={true}
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
          <span
            className="header-text"
          >
            title
          </span>
        </span>
        <span
          className="right-container"
        >
          <button
            aria-label="Close Button"
            className="close-button"
            onClick={[Function]}
          >
            <IconClose
              className="icon-close"
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;
